[tool.poetry]
name = "dobles"
version = "4.0.0"
description = "Test dobles for Python."
authors = ["Jimmy Cuadra <jimmy@uber.com>", "Todd Sifleet <todd@smartfast.com>"]
maintainers = ["Todd Sifleet <todd@smartfast.com>"]
readme = "README.rst"
repository = "https://github.com/smartfastlabs/dobles"
license = "MIT"
keywords = [
    "testing",
    "test dobles",
    "mocks",
    "mocking",
    "stubs",
    "stubbing",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
packages = [
    { include = "dobles" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
black = "23.9.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-asyncio = "*"
pytest = "*"
coverage = "*"
coveralls = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx="7.2.6"
sphinx_rtd_theme="1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 100
max-complexity = 10

[tool.pytest]
addopts = "--tb native --assert plain"


[tool.poetry.plugins.pytest11]
dobles = "dobles.pytest_plugin"
